--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
 
     <div class="tools">
+        <h1>Tools</h1>
         <div class="tool">
             <img src="./src/icons/002-pen.png" alt="">
         </div>
@@ -30,6 +31,12 @@
 
     <div class="frames">
         <h1>Frames</h1>
+    </div>
+    <div id="colorPicker">
+        <h1>Color Picker</h1>
+        <input type="text">
+        <input type="text">
+        <input type="text">
     </div>
     <script type="module" src="./js/main.js"></script>
 </body>
