--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,12 @@
     <title>PiXi3</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="main">
         <canvas id="canvas" width="700" height="700"></canvas>
     </div>
-    
+
     <div class="layers">
         <h1>Layers</h1>
     </div>
@@ -34,10 +36,13 @@
     </div>
     <div id="colorPicker">
         <h1>Color Picker</h1>
-        <input type="text">
-        <input type="text">
-        <input type="text">
+        <div id="colorPickerCanvas"></div>
+        <div class="inputs">
+            <input type="text">
+        </div>
+
     </div>
     <script type="module" src="./js/main.js"></script>
 </body>
+
 </html>
