top and bottom bar

--- a/index.html
+++ b/index.html
@@ -20,15 +20,6 @@
 
     <div class="tools">
         <h1>Tools</h1>
-        <div class="tool">
-            <img src="./src/icons/002-pen.png" alt="">
-        </div>
-        <div class="tool">
-            <img src="./src/icons/001-paint-bucket.png" alt="">
-        </div>
-        <div class="tool">
-            <img src="./src/icons/003-eraser.png" alt="">
-        </div>
     </div>
 
     <div class="frames">
@@ -41,6 +32,12 @@
             <input type="text">
         </div>
 
+    </div>
+    <div class="topbar" id="topbar">
+
+    </div>
+    <div class="bottombar" id="bottombar">
+        
     </div>
     <script type="module" src="./js/main.js"></script>
 </body>
